# DB-agent

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
agent/: __init__.py  generate_sql_query.py  run_sql_query.py  schema.json
database/: database_models.py  sample_data.py  view_database.py
graph/: __init__.py  workflow.py
