[project]
name = "db-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "langchain>=0.1.0",
    "langchain-ollama>=0.1.0",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
