[project]
name = "db-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "langchain>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langgraph>=0.0.26",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent", "graph", "database"]
